--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react": "^17.0.1",
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "react-scrollspy": "^3.4.3"
   },
   "devDependencies": {
     "prettier": "^2.4.1"
